--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
